# rust-microservices-kafka

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
accommodation-service/: .env  Cargo.toml
accommodation-service/resources/: application.yml
accommodation-service/src/: main.rs
accommodation-service/src/accommodation/: model.rs
accommodation-service/src/accommodation/api/mutation/types/: accommodation.rs  mod.rs  room_type.rs
accommodation-service/src/accommodation/api/query/: loaders.rs  mod.rs  resolvers.rs
accommodation-service/src/accommodation/api/shared/: types.rs
accommodation-service/src/accommodation/event/: accommodation_converter.rs  dto.rs  mod.rs  room_type_converter.rs
accommodation-service/src/accommodation/service/: accommodation_service.rs  mod.rs  room_type_service.rs
accommodation-service/src/common/: api.rs  context.rs  db.rs  kafka.rs  mod.rs  model.rs  server.rs
accommodation-service/src/config/: configuration.rs
accommodation-service/src/event/: mod.rs
accommodation-service/src/event/model/: event.rs
accommodation-service/src/event/service/: dto.rs  event_dispatcher.rs  event_service.rs
accommodation-service/src/graphql/: mod.rs
accommodation-service/src/user/: listener.rs  mod.rs  model.rs  service.rs
app-accommodation-service/: Cargo.toml
app-kafka-connector-mongodb/: Cargo.toml
app-kafka-connector-relationaldb/: Cargo.toml
app-kafka-schema-publisher/: Cargo.toml
app-kafka-topic-client/: Cargo.toml
app-kafka-topic-client/src/: main.rs
app-user-service/: Cargo.toml
common-db/: Cargo.toml
common-db-mongodb/: Cargo.toml
common-db-mongodb/src/: config.rs  lib.rs  pool.rs  transaction.rs  util.rs
common-db-relationaldb/: Cargo.toml
common-db-relationaldb/src/: config.rs  lib.rs
common-db/src/: connection.rs  lib.rs  pool.rs  transaction.rs
common-error/: Cargo.toml
common-error/src/: lib.rs
common-kafka/: Cargo.toml
common-kafka/src/: lib.rs
common-metrics/: Cargo.toml
common-security/: Cargo.toml
common-security/src/: authentication.rs  config.rs  lib.rs  middleware.rs
common-security/src/jwk/: default_jwk.rs  error.rs  mod.rs
common-security/src/jwt/: default_jwt.rs  error.rs  mod.rs  rsa.rs  token.rs
common-tracing/: Cargo.toml
docker/: app-realm.json  create-databases.sh  docker-compose.yml
kafka-common/: Cargo.toml
kafka-common/src/: lib.rs
kafka-common/src/schema/: mod.rs
kafka-connector/: .env  Cargo.toml
kafka-connector-mongodb/: .env  Cargo.toml
kafka-connector-mongodb/resources/: application.yml
kafka-connector-mongodb/src/: job.rs  main.rs  schedule.rs
kafka-connector-mongodb/src/common/: context.rs  db.rs  kafka.rs
kafka-connector-mongodb/src/config/: configuration.rs
kafka-connector-mongodb/src/event/model/: event.rs
kafka-connector-mongodb/src/event/service/: event_service.rs
kafka-connector/resources/: application-local.yml  application.yml
kafka-connector/src/: job.rs  main.rs  schedule.rs
kafka-connector/src/common/: context.rs  db.rs  kafka.rs  mod.rs  server.rs
kafka-connector/src/config/: configuration.rs  logging_tracing.rs  mod.rs
kafka-connector/src/event/model/: event.rs
kafka-connector/src/event/service/: event_service.rs
kafka-schema-accommodation/: Cargo.toml
kafka-schema-accommodation/resources/accommodation/: create_accommodation_v1.avsc  update_accommodation_v1.avsc
kafka-schema-accommodation/resources/room_type/: delete_room_type_v1.avsc  update_room_type_v1.avsc
kafka-schema-accommodation/src/: lib.rs  schema_create_accommodation.rs  schema_create_room_type.rs  schema_delete_room_type.rs  schema_update_accommodation.rs  schema_update_room_type.rs
kafka-schema-common/: Cargo.toml
kafka-schema-publisher/: Cargo.toml
kafka-schema-publisher/src/: main.rs
kafka-schema-user/: Cargo.toml
kafka-topic-client/: Cargo.toml
loadtest/: .gitignore  build.gradle  run-create-accommodation.sh  run-create-user.sh  settings.gradle
opentelemetry-propagator-b3/: Cargo.toml
opentelemetry-propagator-b3/src/: propagator.rs
postman/: collection.json
scripts/: README.md  apollo_build_supergraph.sh  apollo_router_build.sh  apollo_router_download.sh  apollo_router_run.sh  docker-compose-down.sh  docker-compose-up.sh  podman-compose-down.sh  podman-compose-up.sh  podman-machine-start.sh  (+1 more)
tracing-common/: Cargo.toml
tracing-common/src/: lib.rs
user-service/: .env  Cargo.toml
user-service/resources/: application-local.yml  application.yml
user-service/src/: main.rs
user-service/src/common/: context.rs  db.rs  kafka.rs  mod.rs  model.rs  paging.rs  tracing.rs
user-service/src/config/: configuration.rs  logging_tracing.rs
user-service/src/event/: mod.rs
user-service/src/event/model/: event.rs
user-service/src/event/service/: dto.rs  event_dispatcher.rs  event_service.rs
user-service/src/graphql/: mod.rs
user-service/src/migration/: m20220403_initial_migration.rs  m20220805_add_trace_id_to_event_table.rs  mod.rs
user-service/src/user/api/: mod.rs  routing.rs
user-service/src/user/api/graphql/: mod.rs
user-service/src/user/api/graphql/mutation/: mod.rs
user-service/src/user/api/graphql/mutation/types/: user.rs
user-service/src/user/api/graphql/query/: loaders.rs  mod.rs  resolvers.rs
user-service/src/user/api/graphql/query/types/: user.rs
user-service/src/user/api/graphql/shared/: types.rs
user-service/src/user/api/resources/request/: create_phone_number_resource.rs  create_user_resource.rs
user-service/src/user/api/resources/response/: mod.rs  phone_number_resource.rs  user_resource.rs
user-service/src/user/api/rest/: endpoints.rs  mod.rs  routing.rs
user-service/src/user/api/rest/resources/request/: mod.rs
user-service/src/user/api/rest/resources/response/: mod.rs  phone_number_resource.rs  user_resource.rs
user-service/src/user/event/: dto.rs  mod.rs  user_converter.rs
user-service/src/user/model/: mod.rs  phone_number.rs  projections.rs  user.rs
user-service/src/user/service/: dto.rs  mod.rs  phone_number_service.rs  user_service.rs
(+96 files in other folders)
