[workspace]

members = [
    "app-accommodation-service",
    "app-kafka-connector-mongodb",
    "app-kafka-connector-relationaldb",
    "app-kafka-schema-publisher",
    "common-db",
    "common-db-mongodb",
    "common-error",
    "common-kafka",
    "common-tracing",
    "kafka-schema-accommodation",
    "kafka-schema-common",
    "kafka-schema-user",
    "kafka-topic-client",
    "opentelemetry-propagator-b3",
    "user-service"
]
