[workspace]

members = [
    "app-accommodation-service",
    "app-kafka-connector-mongodb",
    "app-kafka-connector-relationaldb",
    "app-kafka-schema-publisher",
    "app-kafka-topic-client",
    "common-db",
    "common-db-mongodb",
    "common-error",
    "common-kafka",
    "common-tracing",
    "kafka-schema-accommodation",
    "kafka-schema-common",
    "kafka-schema-user",
    "opentelemetry-propagator-b3",
    "user-service"
]
