[package]
name = "app-kafka-topic-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3.21"
rdkafka = "0.28.0"
tokio = { version = "1.17.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"