[package]
name = "common-error"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
avro-rs = "0.13.0"
axum = "0.5.0"
mongodb = "2.3.0"
schema_registry_converter = { version = "2.1.0", features = ["avro"] }
sea-orm = { version = "0.9.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"], default-features = false }
sea-orm-migration = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde_json = "1.0.79"
tracing = "0.1"