[package]
name = "common-kafka"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.14.0"
murmur3 = "0.5.1"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter", branch = "main", features = ["avro"] }
serde = "1.0.136"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.1.2", features = ["serde", "v4"] }