[package]
name = "common-security"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
axum = "0.5.0"
downcast-rs = "1.2.0"
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.79"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[features]
