[package]
name = "kafka-schema-publisher"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
futures = "0.3.21"
kafka-schema-common = { path = "../kafka-schema-common" }
kafka-schema-user = { path = "../kafka-schema-user" }
schema_registry_converter = { version = "2.1.0", default-features = false, features = ["avro", "blocking"] }
tracing = "0.1"
tracing-subscriber = "0.3"