[package]
name = "opentelemetry-propagator-b3"
description = "Extracted and (visibility) adjusted B3 propagator code from opentelemetry-zipkin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
opentelemetry = { version = "0.17", features = ["rt-tokio", "testing"] }