[package]
name = "tracing-common"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-tracing-opentelemetry = { version = "0.5.0", features = ["jaeger"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-propagator-b3 = { path = "../opentelemetry-propagator-b3" }
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
